atualizando para usar testes de snapshot

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
 </script>
 <body class="mat-typography">
+  <!-- <h1 style="background-color: aquamarine; padding: 30px;">teste</h1> -->
   <h1>teste</h1>
   <app-root></app-root>
 
